# xy-model

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  resources.md  todo.md
.github/workflows/: deploy.yaml
report/: Indroduction.tex  appendix.tex  apssamp.bib  discussion.tex  literature.bib  references.bib  report.tex  results.tex  summary.tex  theoretical_basis.tex
src/: CMakeLists.txt  README.md  XYModel.hpp  main.cpp  main.ipynb  main_multithreading.cpp  plots.ipynb
src/data/: ac-times.hdf5  add_gridpoints.hdf5  autocorrelation.hdf5  data.hdf5  data3D.hdf5
tex_template/: apssamp.bib  projectReportTemplate.tex  projectReportTemplateNotes.bib
web_simulation/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web_simulation/src/: App.tsx  index.css
web_simulation/src/Components/: Canvas.tsx  Colorwheel.tsx  Controls.tsx  FastContext.tsx  Plots.tsx  Store.tsx  ThemeProvider.tsx  Worker.ts
